--- a/Splint/en.lproj/MainStoryboard.storyboard
+++ b/Splint/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="e9O-nf-s7Y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="e9O-nf-s7Y">
     <dependencies>
         <deployment version="1792" defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -22,7 +22,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" reuseIdentifier="index_cell" id="MFR-SR-M9T" customClass="IndexCell">
-                                <rect key="frame" x="80" y="26" width="320" height="80"/>
+                                <rect key="frame" x="80" y="90" width="320" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
@@ -60,7 +60,7 @@
                             </collectionViewCell>
                         </cells>
                         <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="S7t-Iu-xry">
-                            <rect key="frame" x="0.0" y="0.0" width="480" height="26"/>
+                            <rect key="frame" x="0.0" y="64" width="480" height="26"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </collectionReusableView>
                         <connections>
@@ -68,13 +68,54 @@
                             <outlet property="delegate" destination="hyD-tc-sMv" id="iui-f6-yCa"/>
                         </connections>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" title="Videos" image="Film" id="YDD-XP-CTi"/>
                     <navigationItem key="navigationItem" id="ZFU-tG-0oL"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kpT-cc-aKd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2225" y="43"/>
+            <point key="canvasLocation" x="2409" y="113"/>
+        </scene>
+        <!--Content Detail View Controller-->
+        <scene sceneID="QyI-an-STo">
+            <objects>
+                <viewController storyboardIdentifier="content" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yaf-wD-4aF" customClass="ContentDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Cz4-6H-N04"/>
+                        <viewControllerLayoutGuide type="bottom" id="Uaw-gN-1Fm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rjt-SQ-hUO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Some Description " translatesAutoresizingMaskIntoConstraints="NO" id="tZS-tI-6ge">
+                                <rect key="frame" x="46" y="291" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Wp-Ji-awL">
+                                <rect key="frame" x="0.0" y="64" width="320" height="178"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Some Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0wn-ZA-UCB">
+                                <rect key="frame" x="125" y="250" width="82" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="videoContainerView" destination="8Wp-Ji-awL" id="NDX-df-SbF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="isw-dZ-51O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2974" y="9"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="iBw-0p-XsR">
@@ -88,12 +129,31 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="hyD-tc-sMv" kind="relationship" relationship="viewControllers" id="bhC-a3-NBB"/>
+                        <segue destination="thn-Cc-gVP" kind="relationship" relationship="viewControllers" id="bhC-a3-NBB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vW8-M4-ihk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1451" y="43"/>
+        </scene>
+        <!--Navigation Controller - Videos-->
+        <scene sceneID="ViJ-UB-IAn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="thn-Cc-gVP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Videos" image="Film" id="YDD-XP-CTi"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bDL-WJ-frp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hyD-tc-sMv" kind="relationship" relationship="rootViewController" id="pYa-Pl-Q95"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wN5-KQ-OeB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1883" y="113"/>
         </scene>
     </scenes>
     <resources>
