--- a/Splint/en.lproj/MainStoryboard.storyboard
+++ b/Splint/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="thn-Cc-gVP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="thn-Cc-gVP">
     <dependencies>
         <deployment version="1792" defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Index View Controller - Videos-->
@@ -35,7 +35,7 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="9610E65B-8DEF-423C-A021-2377BE0F9264" translatesAutoresizingMaskIntoConstraints="NO" id="EX6-mw-oOc">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="EX6-mw-oOc">
                                             <rect key="frame" x="2" y="2" width="316" height="127"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
@@ -60,7 +60,7 @@
                                 </connections>
                             </collectionViewCell>
                         </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="S7t-Iu-xry">
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="S7t-Iu-xry">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="26"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </collectionReusableView>
@@ -88,11 +88,11 @@
                         <viewControllerLayoutGuide type="bottom" id="BfP-io-xSL"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="d4c-i0-dLY">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="352"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xAe-yo-5Wl">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="624"/>
+                                <rect key="frame" x="0.0" y="0.0" width="324" height="351"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rjt-SQ-hUO">
@@ -102,7 +102,7 @@
                                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Wp-Ji-awL" userLabel="Video Container">
                                                 <rect key="frame" x="0.0" y="20" width="320" height="200"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <color key="backgroundColor" red="0.27589133059999998" green="1" blue="0.23572052360000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" text="Some Description " selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZS-tI-6ge" userLabel="Desc">
                                                 <rect key="frame" x="40" y="258" width="241" height="128"/>
@@ -126,7 +126,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="1" green="0.27181667859999997" blue="0.103895443" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="tZS-tI-6ge" firstAttribute="top" secondItem="0wn-ZA-UCB" secondAttribute="bottom" constant="32" id="0ei-Gp-O13"/>
                                             <constraint firstItem="0wn-ZA-UCB" firstAttribute="top" secondItem="rjt-SQ-hUO" secondAttribute="top" constant="205" id="0oo-9k-bq4"/>
@@ -155,7 +155,7 @@
                                 </userDefinedRuntimeAttributes>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.77540716730000003" green="0.54749859850000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="xAe-yo-5Wl" secondAttribute="bottom" id="GTO-w1-NZy"/>
                             <constraint firstItem="xAe-yo-5Wl" firstAttribute="leading" secondItem="d4c-i0-dLY" secondAttribute="leading" id="PEW-cW-kX2"/>
@@ -165,6 +165,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="5iX-jn-JUB"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="416"/>
                     <connections>
                         <outlet property="scrollView" destination="xAe-yo-5Wl" id="q2g-dX-NN3"/>
                         <outlet property="textView" destination="tZS-tI-6ge" id="IEd-V9-Ls0"/>
@@ -201,121 +202,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="9610E65B-8DEF-423C-A021-2377BE0F9264" width="320" height="480">
-            <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
-GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
-DBIAwAAAgAKACtISCRMVWk5TLm9iamVjdHOhFIADgAnSEgkXGqIYGYAEgAWACBAA0h0JHh9fEBROU1RJ
-RkZSZXByZXNlbnRhdGlvboAGgAdPERe4TU0AKgAADx6AACBG6BAA1wUTQWFQuGQ2HQ+IRGJROKRWLReM
-RmNRuOR2PR+QSGRSOSSWTSeUSmVSuWS2XS+YTGZTOaTWbTeXtqCpWCtmETigUGhUOiUWjUekUmlUumU2
-nU+oVGpVOIzqBP+qVmtVuuV2vV+wWGxWOyWWzWeO1i0Wu2W23W+4XG5XO6XW7VK1Xe9Xu+X2/X/AYHBY
-PCRG84XEYnFYvGY3HY/IYTD5HKZXLZfMZnNZvORDJ53QaHRaPSaXTaecZ/UavWa3Xa/YbHGarZbXbbfc
-bndbug7Teb/gcHhcPibbfcXkcnlcvmc29cfndHpdPqdXrUDodftdvud3vd8AdnwePyeXzefV+L0ev2e3
-3e+/er4fP6fX7feo/L8fv+f3/P+kr9QBAcCQLAz/wFA8FQXBkGu7BMHQjCUJwo3cIQrDEMw1DbNwvDkP
-xBEMRL7D0RxNE8URSr8SxVFsXRfGDexjGcaRrGybxZG8dR3HkevDH0gSDIUhRzIcjSPJEGSLJMmSbJz6
-yXJ8pSnKjvSjKssSzLTkyvLcvS/MDZS7MMyTLMzOzHM81TXNjFTTNs4TjOS6zfOc7TvPCxTrPM+T7Pym
-z3P9BUHQia0DQtEUTRSSUPRdHUfSCJ0bSNKUrSFJ0tTNNUFTFN09T85U7UFR1JMlRVLVFUypU9VVbV0j
-VZV9ZVnG9Y1pW9cRVW1c15XsOV3X1g2FB1gWHY1jwBYtkWXZj6WVZtoWi81n2latrO1alr21bbmWzblv
-3A4FvXDclyzFc10XS9lx3Vdt3Q7d943k6l2Xne17slfF9X23l635f+ALff2A4Jgqx4Hg2E4UrOEYXh2H
-qXhuIYnikZYri+ML3iWM45jqT43j2Q5EtOR5Lkyu5Bk+VZWhWU5Zl+TZdmGZ49mWaZvi+bZxneH51nmf
-4Nn2gaHf+haJo976NpGl3fpWmafdGnahqdwalqmr2vq2sa3aGta5r9j69sGx19sWybPW+zbRtdXbVtm3
-1Lt24bnT25bpu9K7tvG90dvW+b/Qu/cBwc/cFwnDzvw3EcXOHFcZx8z8dyHJzByXKcvLPLcxzcpc1znP
-yMgIgAAgT/gUFg0HhEJhULhkNh0PiERiUTikVi0XjEZjUbjkdj0fkEhkUjkklk0nlEplUrlktl0vmExm
-UzmkHgk1nE5nU7nk9n0/oFBoVDolFo1HpFJpVIm9Lp1PqFRqVTqlVq1XrFZrVbrkXptdsFhsVjslls1n
-tFptVro9ftlvuFxuVzul1u13vF5hduvV9v1/wGBwWDwmFu98w2JxWLxmNx2PyGRhWIyWVy2XzGZzWbzk
-yymd0Gh0Wj0ml01/z+n1Wr1mt12v2E01Ox2m12233G50+z3W932/4HB4Vr3nD43H5HJ5XLmfF5nP6HR6
-XT6fO6nX7HZ7Xb0nW7nf8Hh8Xjw/k83n9Hp9Vg73r93v+Hx+Um9vz+33/H5/P1/X9/z/wA7D+QDAkCwN
-A7bQHBEFwZBsHMtBUHwlCcKQqu0IwtDMNQ3DisQxDsQRDEURp5D8SRPFEUxUkETRXF0XxhGKDRbGUaxt
-G8NRpHEdx5HsAx1H0gyFIb1SBIkjyRJLqSNJUmydJ7fyZKEpypKrVSlK0sy1LbKyxLkvzBMLAS9MUyzN
-M7iTRNU1zYwMyTbOE4zko03znO07zw5s8z3Pk+qTOs/UDQVBolQFCUPRFEUNRNGUbPNF0dSNJTXSFJ0t
-S8uUrTFN05J1NU7UFQx9T9RVLU0YVJU9VVXEVU1ZV9YQpV1Y1pWsDVnW1c10/FcV3X1fyLYFhWHVtiWN
-Y8K17ZFl2Y49lWbaFotzZ9pWrazW2pa9tW20Ns25b9wS7cNx3I5lvXLdF0r9c91Xbdy5XZd95Xms143p
-e98K1e1835fqoX3f2A4EomAYHg2Dp1guEYXhiXYVhuIYikmH4liuLI1imL41jaIYzjmP5BGeQ5Hkig49
-kuUYjk+U5ZhGV5bmGA5fmOaXxmea5xd+b5znl0Z3nugXBn+g6Ja+h6LpFoaPpOmWPpem6hYGn6jqlc6n
-qusVhq+s65U+t67sFQa/sOyUvsey7RR2z7TtlD7Xtu4T9t+47pPG57rvE47vvO+TVve+8BMW/8Dwkt8H
-wvESpw/E8ZJvF8byEicfyPKRwgKAACBP+BQWDQeEQmFQuGQ2HQ+IRGJROKRWLReMRmNRuOR2PR+QSGRS
-OSSWTSeUSmVSuWS2XS+YTGZTOaQeCTWcTmdTueT2fT+gUGhUOiUWjUekUmlUib0unU+oVGpVOqVWrVes
-VmtVuuRem12wWGxWOyWWzWe0Wm1Wuj1+2W+4XG5XO6XW7Xe8XmF269X2/X/AYHBYPCYW73zDYnFYvGY3
-HY/IZGFYjJZXLZfMZnNZvOTLKZ3QaHRaPSaXTX/P6fVavWa3Xa/YTTU7HabXbbfcbnT7Pdb3fb/gcHhW
-vecPjcfkcnlcuZ8Xmc/odHpdPp87qdfsdntdvSdbud/weHxePD+Tzef0en1WDvev3e/4fH5Sb2/P7ff8
-fn8/X9f3/P/ADsP5AMCQLA0DttAcEQXBkGwcy0FQfCUJwpCq7QjC0Mw1DcOKxDEOxBEMRRGnkPxJE8UR
-TFSQRNFcXRfGEYoNFsZRrG0bw1GkcR3HkewDHUfSDIUhvVIEiSPJEkupI0lSbJ0nt/JkoSnKkqtVKUrS
-zLUtsrLEuS/MEwsBL0xTLM0zuJNE1TXNjAzJNs4TjOSjTfOc7TvPDmzzPc+T6pM6z9QNBUGiVAUJQ9EU
-RQ1E0ZRs80XR1I0lNdIUnS1Ly5StMU3TknU1TtQVDH1P1FUtTRhUlT1VVcRVTVlX1hClXVjWlawNWdbV
-zXT8VxXdfV/ItgWFYdW2JY1jwrXtkWXZjj2VZtoWi3Nn2latrNbalr21bbQ2zblv3BLtw3HcjmW9ct0X
-Sv1z3Vdt3Lldl33leazXjel73wrV7Xzfl+qhfd/YDgSiYBgeDYOnWC4RheGJdhWG4hiKSYfiWK4sjWKY
-vjWNohjOOY/kEZ5DkeSKDj2S5RiOT5TlmEZXluYYDl+Y5pfGZ5rnF35vnOeXRnee6BcGf6Dolr6HoukW
-ho+k6ZY+l6bqFgafqOqVzqeq6xWGr6zrlT63ruwVBr+w7JS+x7LtFHbPtO2UPte27hP237juk8bnuu8T
-ju+875NW977wExb/wPCS3wfC8RKnD8Txkm8XxvISJx/I8pHCAoAAIE/4FBYNB4RCYVC4ZDYdD4hEYlE4
-pFYtF4xGY1G45HY9H5BIZFI5JJZNJ5RKZVK5ZLZdL5hMZlM5pB4JNZxOZ1O55PZ9P6BQaFQ6JRaNR6RS
-aVSJvS6dT6hUalU6pVatV6xWa1W65F6bXbBYbFY7JZbNZ7RabVa6PX7Zb7hcblc7pdbtd7xeYXbr1fb9
-f8BgcFg8JhbvfMNicVi8Zjcdj8hkYViMllctl8xmc1m85MspndBodFo9JpdNf8/p9Vq9Zrddr9hNNTsd
-ptdtt9xudPs91vd9v+BweFa95w+Nx+RyeVy5nxeZz+h0el0+nzup1+x2e129J1u53/B4fF48P5PN5/R6
-fVYO96/d7/h8flJvb8/t9/x+fz9f1/f8/8AOw/kAwJAsDQO20BwRBcGQbBzLQVB8JQnCkKrtCMLQzDUN
-w4rEMQ7EEQxFEaeQ/EkTxRFMVJBE0VxdF8YRig0WxlGsbRvDUaRxHceR7AMdR9IMhSG9UgSJI8kSS6kj
-SVJsnSe38mShKcqSq1UpStLMtS2yssS5L8wTCwEvTFMszTO4k0TVNc2MDMk2zhOM5KNN85ztO88ObPM9
-z5PqkzrP1A0FQaJUBQlD0RRFDUTRlGzzRdHUjSU10hSdLUvLlK0xTdOSdTVO1BUMfU/UVS1NGFSVPVVV
-xFVNWVfWEKVdWNaVrA1Z1tXNdPxXFd19X8i2BYVh1bYljWPCte2RZdmOPZVm2haLc2faVq2s1tqWvbVt
-tDbNuW/cEu3DcdyOZb1y3RdK/XPdV23cuV2XfeV5rNeN6XvfCtXtfN+X6qF939gOBKJgGB4Ng6dYLhGF
-4Yl2FYbiGIpJh+JYriyNYpi+NY2iGM45j+QRnkOR5IoOPZLlGI5PlOWYRleW5hgOX5jml8ZnmucXfm+c
-55dGd57oFwZ/oOiWvoei6RaGj6Tplj6XpuoWBp+o6pXOp6rrFYavrOuVPreu7BUGv7DslL7Hsu0Uds+0
-7ZQ+17buE/bfuO6Txue67xOO77zvk1b3vvATFv/A8JLfB8LxEqcPxPGSbxfG8hInH8jykcICgAAgT/gU
-Fg0HhEJhULhkNh0PiERiUTikVi0XjEZjUbjkdj0fkEhkUjkklk0nlEplUrlktl0vmExmUzmkHgk1nE5n
-U7nk9n0/oFBoVDolFo1HpFJpVIm9Lp1PqFRqVTqlVq1XrFZrVbrkXptdsFhsVjslls1ntFptVro9ftlv
-uFxuVzul1u13vF5hduvV9v1/wGBwWDwmFu98w2JxWLxmNx2PyGRhWIyWVy2XzGZzWbzkyymd0Gh0Wj0m
-l01/z+n1Wr1mt12v2E01Ox2m12233G50+z3W932/4HB4Vr3nD43H5HJ5XLmfF5nP6HR6XT6fO6nX7HZ7
-Xb0nW7nf8Hh8Xjw/k83n9Hp9Vg73r93v+Hx+Um9vz+33/H5/P1/X9/z/wA7D+QDAkCwNA7bQHBEFwZBs
-HMtBUHwlCcKQqu0IwtDMNQ3DisQxDsQRDEURp5D8SRPFEUxUkETRXF0XxhGKDRbGUaxtG8NRpHEdx5Hs
-Ax1H0gyFIb1SBIkjyRJLqSNJUmydJ7fyZKEpypKrVSlK0sy1LbKyxLkvzBMLAS9MUyzNM7iTRNU1zYwM
-yTbOE4zko03znO07zw5s8z3Pk+qTOs/UDQVBolQFCUPRFEUNRNGUbPNF0dSNJTXSFJ0tS8uUrTFN05J1
-NU7UFQx9T9RVLU0YVJU9VVXEVU1ZV9YQpV1Y1pWsDVnW1c10/FcV3X1fyLYFhWHVtiWNY8K17ZFl2Y49
-lWbaFotzZ9pWrazW2pa9tW20Ns25b9wS7cNx3I5lvXLdF0r9c91Xbdy5XZd95Xms143pe98K1e1835fq
-oX3f2A4EomAYHg2Dp1guEYXhiXYVhuIYikhsoKE2JYvjCrG0go3IKNeK4zkORKHjaBEqgIAAAA8BAAAD
-AAAAAQFAAAABAQADAAAAAQHgAAABAgADAAAABAAAD9gBAwADAAAAAQAFAAABBgADAAAAAQACAAABEQAE
-AAAABQAAD/QBEgADAAAAAQABAAABFQADAAAAAQAEAAABFgADAAAAAQBmAAABFwAEAAAABQAAD+ABHAAD
-AAAAAQABAAABPQADAAAAAQACAAABUgADAAAAAQACAAABUwADAAAABAAAEAiHcwAHAAAHqAAAEBAAAAAA
-AAgACAAIAAgAAAMrAAADHQAAAx0AAAMdAAACkwAAAAgAAAMzAAAGUAAACW0AAAyKAAEAAQABAAEAAAeo
-YXBwbAIgAABtbnRyUkdCIFhZWiAH2QACABkACwAaAAthY3NwQVBQTAAAAABhcHBsAAAAAAAAAAAAAAAA
-AAAAAAAA9tYAAQAAAADTLWFwcGwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAtkZXNjAAABCAAAAG9kc2NtAAABeAAABWxjcHJ0AAAG5AAAADh3dHB0AAAHHAAAABRyWFla
-AAAHMAAAABRnWFlaAAAHRAAAABRiWFlaAAAHWAAAABRyVFJDAAAHbAAAAA5jaGFkAAAHfAAAACxiVFJD
-AAAHbAAAAA5nVFJDAAAHbAAAAA5kZXNjAAAAAAAAABRHZW5lcmljIFJHQiBQcm9maWxlAAAAAAAAAAAA
-AAAUR2VuZXJpYyBSR0IgUHJvZmlsZQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAbWx1YwAAAAAAAAAeAAAADHNrU0sAAAAoAAABeGhySFIAAAAoAAABoGNhRVMAAAAk
-AAAByHB0QlIAAAAmAAAB7HVrVUEAAAAqAAACEmZyRlUAAAAoAAACPHpoVFcAAAAWAAACZGl0SVQAAAAo
-AAACem5iTk8AAAAmAAAComtvS1IAAAAWAAACyGNzQ1oAAAAiAAAC3mhlSUwAAAAeAAADAGRlREUAAAAs
-AAADHmh1SFUAAAAoAAADSnN2U0UAAAAmAAAConpoQ04AAAAWAAADcmphSlAAAAAaAAADiHJvUk8AAAAk
-AAADomVsR1IAAAAiAAADxnB0UE8AAAAmAAAD6G5sTkwAAAAoAAAEDmVzRVMAAAAmAAAD6HRoVEgAAAAk
-AAAENnRyVFIAAAAiAAAEWmZpRkkAAAAoAAAEfHBsUEwAAAAsAAAEpHJ1UlUAAAAiAAAE0GFyRUcAAAAm
-AAAE8mVuVVMAAAAmAAAFGGRhREsAAAAuAAAFPgBWAWEAZQBvAGIAZQBjAG4A/QAgAFIARwBCACAAcABy
-AG8AZgBpAGwARwBlAG4AZQByAGkBDQBrAGkAIABSAEcAQgAgAHAAcgBvAGYAaQBsAFAAZQByAGYAaQBs
-ACAAUgBHAEIAIABnAGUAbgDoAHIAaQBjAFAAZQByAGYAaQBsACAAUgBHAEIAIABHAGUAbgDpAHIAaQBj
-AG8EFwQwBDMEMAQ7BEwEPQQ4BDkAIAQ/BEAEPgREBDAEOQQ7ACAAUgBHAEIAUAByAG8AZgBpAGwAIABn
-AOkAbgDpAHIAaQBxAHUAZQAgAFIAVgBCkBp1KAAgAFIARwBCACCCcl9pY8+P8ABQAHIAbwBmAGkAbABv
-ACAAUgBHAEIAIABnAGUAbgBlAHIAaQBjAG8ARwBlAG4AZQByAGkAcwBrACAAUgBHAEIALQBwAHIAbwBm
-AGkAbMd8vBgAIABSAEcAQgAg1QS4XNMMx3wATwBiAGUAYwBuAP0AIABSAEcAQgAgAHAAcgBvAGYAaQBs
-BeQF6AXVBeQF2QXcACAAUgBHAEIAIAXbBdwF3AXZAEEAbABsAGcAZQBtAGUAaQBuAGUAcwAgAFIARwBC
-AC0AUAByAG8AZgBpAGwAwQBsAHQAYQBsAOEAbgBvAHMAIABSAEcAQgAgAHAAcgBvAGYAaQBsZm6QGgAg
-AFIARwBCACBjz4/wZYdO9k4AgiwAIABSAEcAQgAgMNcw7TDVMKEwpDDrAFAAcgBvAGYAaQBsACAAUgBH
-AEIAIABnAGUAbgBlAHIAaQBjA5MDtQO9A7kDugPMACADwAPBA78DxgOvA7sAIABSAEcAQgBQAGUAcgBm
-AGkAbAAgAFIARwBCACAAZwBlAG4A6QByAGkAYwBvAEEAbABnAGUAbQBlAGUAbgAgAFIARwBCAC0AcABy
-AG8AZgBpAGUAbA5CDhsOIw5EDh8OJQ5MACAAUgBHAEIAIA4XDjEOSA4nDkQOGwBHAGUAbgBlAGwAIABS
-AEcAQgAgAFAAcgBvAGYAaQBsAGkAWQBsAGUAaQBuAGUAbgAgAFIARwBCAC0AcAByAG8AZgBpAGkAbABp
-AFUAbgBpAHcAZQByAHMAYQBsAG4AeQAgAHAAcgBvAGYAaQBsACAAUgBHAEIEHgQxBEkEOAQ5ACAEPwRA
-BD4ERAQ4BDsETAAgAFIARwBCBkUGRAZBACAGKgY5BjEGSgZBACAAUgBHAEIAIAYnBkQGOQYnBkUARwBl
-AG4AZQByAGkAYwAgAFIARwBCACAAUAByAG8AZgBpAGwAZQBHAGUAbgBlAHIAZQBsACAAUgBHAEIALQBi
-AGUAcwBrAHIAaQB2AGUAbABzAGV0ZXh0AAAAAENvcHlyaWdodCAyMDA3IEFwcGxlIEluYy4sIGFsbCBy
-aWdodHMgcmVzZXJ2ZWQuAFhZWiAAAAAAAADzUgABAAAAARbPWFlaIAAAAAAAAHRNAAA97gAAA9BYWVog
-AAAAAAAAWnUAAKxzAAAXNFhZWiAAAAAAAAAoGgAAFZ8AALg2Y3VydgAAAAAAAAABAc0AAHNmMzIAAAAA
-AAEMQgAABd7///MmAAAHkgAA/ZH///ui///9owAAA9wAAMBs0iIjJCVaJGNsYXNzbmFtZVgkY2xhc3Nl
-c18QEE5TQml0bWFwSW1hZ2VSZXCjJicoXxAQTlNCaXRtYXBJbWFnZVJlcFpOU0ltYWdlUmVwWE5TT2Jq
-ZWN00iIjKitXTlNBcnJheaIqKNIiIy0uXk5TTXV0YWJsZUFycmF5oy0qKNMwMQkyMzRXTlNXaGl0ZVxO
-U0NvbG9yU3BhY2VEMCAwABADgAvSIiM2N1dOU0NvbG9yojYo0iIjOTpXTlNJbWFnZaI5KF8QD05TS2V5
-ZWRBcmNoaXZlctE9PlRyb290gAEACAARABoAIwAtADIANwBFAEsAVABbAGgAbwB3AHkAfgCAAIIAhwCS
-AJQAlgCYAJ0AoACiAKQApgCoAK0AxADGAMgYhBiJGJQYnRiwGLQYxxjSGNsY4BjoGOsY8Bj/GQMZChkS
-GR8ZJBkmGSgZLRk1GTgZPRlFGUgZWhldGWIAAAAAAAACAQAAAAAAAAA/AAAAAAAAAAAAAAAAAAAZZA
-</mutableData>
-        </image>
+        <image name="Default.png" width="320" height="480"/>
         <image name="Film" width="30" height="30"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
